<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/pingthemelight"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/lightbluesky"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_title"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_title"
            android:textColorHint="@color/lightgrey"
            android:textColor="@color/brown"
            android:padding="16dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_title"
            android:textColorHint="@color/lightgrey"
            android:textColor="@color/brown"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/pingthemedark"
            android:text="@string/button_login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/lightgrey"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>